Android: Finishes the large rework of the callback system. Now it can implement many more callbacks.
git-svn-id: http://svn.code.sf.net/p/lazarus-ccr/svn@1833 8e941d3f-bd1b-0410-a28a-d453659cc2b4